--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,9 +11,25 @@ dependencies:
     sdk: flutter
 
 dev_dependencies:
+  flutter_launcher_icons: "^0.14.3"
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
 
 flutter:
+  assets:
+    - assets/images/
+    - assets/icon/
   uses-material-design: true
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/icon.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+
+flutter_assets:
+  assets_path: assets/images/
+  output_path: lib/core/utils
+  filename: app_images.dart
+  field_prefix: null
