--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -62,8 +62,8 @@ flutter_native_splash:
     #image: assets/android12splash.png
 
     # Splash screen background color.
-    #color: "#42a5f5"
-
+    color: "#29323B"
+    image: "assets/images/android12+.png"
     # App icon background color.
     #icon_background_color: "#111111"
 
