--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,29 +7,35 @@ environment:
   sdk: ^3.7.0
 
 dependencies:
-  flutter_native_splash: ^2.4.5
+  dots_indicator: ^4.0.1
   flutter:
     sdk: flutter
+  flutter_native_splash: ^2.4.5
+  flutter_svg: ^2.0.17
 
 dev_dependencies:
   flutter_launcher_icons: "^0.14.3"
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
 
 flutter:
   assets:
     - assets/images/
     - assets/icon/
+    - assets/images/categories/
   fonts:
-  - family: poppins
-    fonts:
-      - asset: assets/fonts/poppins/Poppins-Regular.ttf
-  - family: SF
-    fonts:
-      - asset: assets/fonts/sf_pro_display/SFPRODISPLAYREGULAR.OTF
- 
-  
+    - family: poppins
+      fonts:
+        - asset: assets/fonts/poppins/Poppins-Regular.ttf
+        - asset: assets/fonts/poppins/Poppins-SemiBold.ttf
+          weight: 600
+    - family: SF
+      fonts:
+        - asset: assets/fonts/sf_pro_display/SFPRODISPLAYREGULAR.OTF
+        - asset: assets/fonts/sf_pro_display/SFPRODISPLAYMEDIUM.OTF
+          weight: 500
+
   uses-material-design: true
 
 flutter_launcher_icons:
@@ -39,7 +45,10 @@ flutter_launcher_icons:
   min_sdk_android: 21 # android min sdk min:16, default 21
 
 flutter_assets:
-  assets_path: assets/images/
+  assets_path:
+    - assets/images/
+    - assets/icon/
+  
   output_path: lib/core/utils
   filename: app_images.dart
   field_prefix: null
