--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ^3.7.0
 
 dependencies:
+  animated_toggle_switch: ^0.8.4
   dots_indicator: ^4.0.1
   flutter:
     sdk: flutter
