--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,11 +8,15 @@ environment:
 
 dependencies:
   animated_toggle_switch: ^0.8.4
+  dio: ^5.8.0+1
   dots_indicator: ^4.0.1
+  either_dart: ^1.0.0
   flutter:
     sdk: flutter
+  flutter_bloc: ^9.1.0
   flutter_native_splash: ^2.4.5
   flutter_svg: ^2.0.17
+  get_it: ^8.0.3
 
 dev_dependencies:
   flutter_launcher_icons: "^0.14.3"
@@ -55,7 +59,7 @@ flutter_assets:
   assets_path:
     - assets/images/
     - assets/icon/
-  
+
   output_path: lib/core/utils
   filename: app_images.dart
   field_prefix: null
