--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,18 +7,19 @@ environment:
   sdk: ^3.7.0
 
 dependencies:
-  animated_toggle_switch: ^0.8.4
   cached_network_image: ^3.4.1
   dio: ^5.8.0+1
   dots_indicator: ^4.0.1
   either_dart: ^1.0.0
   flutter:
     sdk: flutter
+  flutter_advanced_switch: ^3.1.0
   flutter_app_loading_indicator: ^0.0.3
   flutter_bloc: ^9.1.0
   flutter_native_splash: ^2.4.5
   flutter_svg: ^2.0.17
   get_it: ^8.0.3
+  load_switch: ^2.1.1
   lottie: ^3.3.1
 
 dev_dependencies:
@@ -39,6 +40,7 @@ flutter:
     - assets/icon/active_icons/
     - assets/icon/in_active_icons/
     - assets/lottie/
+    - assets/icon/settings_view_icons/
   fonts:
     - family: poppins
       fonts:
